--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -120,10 +120,11 @@
     }
 
     .action-banner__actions {
-      margin-top: utils.rem(spacing.$x-large);
       text-align: left;
       position: relative;
+      top: 0;
       left: 0;
+      transform: unset;
     }
 
     .action-banner__actions > .btn.btn--inverse {
