--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -71,6 +71,8 @@ $action-banner-subtle-background: global.$nice-cream;
 $action-banner-subtle-border: global.$nice-cream;
 $action-banner-full-width-background: global.$nice-teal;
 $action-banner-full-width-border: global.$nice-teal;
+$action-banner-full-width-subtle-background: global.$nice-cream-3;
+$action-banner-full-width-subtle-border: global.$nice-cream-3;
 
 // Alphabet
 $alphabet-letter-background: global.$white;
