--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -73,6 +73,8 @@ $action-banner-full-width-background: global.$nice-teal;
 $action-banner-full-width-border: global.$nice-teal;
 $action-banner-full-width-subtle-background: global.$nice-cream-3;
 $action-banner-full-width-subtle-border: global.$nice-cream-3;
+$action-banner-full-width-dark-background-text-colour: global.$white;
+$action-banner-full-width-light-background-text-colour: global.$custom-blue-1;
 
 // Alphabet
 $alphabet-letter-background: global.$white;
