NDS-412 design system update action banner component (#323)
* NDS-412 Convert action banner from class to rfc. Add demo to testpage

* NDS-412 Add return type

* NDS-412 Update action banner for new variant

* Revert "NDS-412 Update action banner for new variant"

This reverts commit 3557cac46c2d3a924fa6cfcf195fa093aab286e5.

* NDS-412 Add fullWidth variant with background image

* NDS-412 Remove commented code. Add padding to action banner container to match figma visual

* NDS-412 Add action-banner image styles for mobile first

* NDS-412 Remove template debug

* NDS-412 Override transform for __actions block

* NDS-412 Add full width subtle variant. Adjust font sizes as per xd

* NDS-412 Use mixins for lead and title font-size

* NDS-412 Change variable name so comment isn't required

* NDS-412 Add unit tests

* NDS-412 Move closing unit tests and remove duplicated test

* NDS-412 Make onClosing testable - wip

* NDS-412 Remove experimental unit testing of onClose prop error behaviour

* NDS-412 Update docs - wip

* NDS-412 Add props and style for full width examples. Add link colour and focus for fullWidth variants. Update docs

* NDS-412 Remove expanding example code. Add links to test page examples

* NDS-412 Add screenshots for action-banner fullWidth variants

* NDS-412 Adjust example order

* NDS-412 Apply min-height for full width vatiant container. Apply background-size cover to prevent image repeating on narrow viewport. Make CTA optional

* NDS-412 Remove 'close' feature. Update unit test cta to use button instead of anchor

* NDS-412 Remove close feature from testpage

* NDS-412 Fix tests. Adjust aspect ratio between sm and md breakpoints

* Publish

 - @nice-digital/design-system@5.0.18
 - @nice-digital/nds-a-z-list@4.0.10
 - @nice-digital/nds-action-banner@4.0.9
 - @nice-digital/nds-alert@4.0.9
 - @nice-digital/nds-alphabet@3.0.9
 - @nice-digital/nds-breadcrumbs@4.0.9
 - @nice-digital/nds-bu

--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -54,29 +54,6 @@
     }
   }
 
-  &__close {
-    @include focus.inverse-button-focus;
-    appearance: none;
-    background: 0;
-    border: 0;
-    color: colours.$text-inverse;
-    cursor: pointer;
-    line-height: 1;
-    padding: utils.rem(spacing.$small);
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 1;
-
-    &:hover {
-      background: rgb(0 0 0 / 20%);
-    }
-
-    &:focus {
-      @include focus.inverse-focus-style;
-    }
-  }
-
   &--subtle {
     @include typography.links-default;
     background: colours.$action-banner-subtle-background;
@@ -87,23 +64,133 @@
       color: colours.$text;
     }
 
-    .action-banner__close {
+    .action-banner__actions {
+      @include focus.default-button-focus;
+    }
+  }
+
+  &--full-width {
+    @include layout.fullWidth();
+    @include typography.links-default;
+    background: colours.$action-banner-full-width-background;
+    border: 1px solid colours.$action-banner-full-width-border;
+    color: colours.$text-inverse;
+    padding: 0;
+
+    .action-banner__intro * {
+      @include typography.lead();
+      margin-top: utils.rem(spacing.$medium);
+      margin-bottom: utils.rem(spacing.$large);
+    }
+
+    .action-banner__container {
+      min-height: 300px;
+      padding-top: utils.rem(spacing.$x-large);
+      padding-bottom: utils.rem(spacing.$x-large);
+    }
+
+    .action-banner__title {
+      @include typography.h2();
+      color: colours.$text-inverse;
+      margin: 0;
+    }
+
+    .action-banner__actions {
+      text-align: left;
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: unset;
+    }
+
+    .action-banner__actions > .btn.btn--inverse {
+      @include focus.default-button-focus;
+    }
+
+    &__image-container {
+      aspect-ratio: 16 / 9;
+      background-position: center center;
+      background-size: cover;
+      display: block;
+      height: 100%;
+    }
+
+    & a {
+      &:link,
+      &:visited,
+      &:hover,
+      &:active,
+      &:focus {
+        color: colours.$action-banner-full-width-dark-background-text-colour;
+        outline-color: colours.$focus-inverse;
+      }
+    }
+  }
+
+  &--full-width-subtle {
+    @extend .action-banner--full-width;
+
+    background: colours.$action-banner-full-width-subtle-background;
+    border: 1px solid colours.$action-banner-full-width-subtle-border;
+    color: colours.$text;
+
+    .action-banner__title {
       color: colours.$text;
     }
 
     .action-banner__actions {
       @include focus.default-button-focus;
     }
+
+    & a {
+      &:link,
+      &:visited,
+      &:hover,
+      &:active,
+      &:focus {
+        color: colours.$action-banner-full-width-light-background-text-colour;
+        outline-color: colours.$focus;
+      }
+    }
   }
 
-  &--closeable {
-    .action-banner__title {
-      padding-right: utils.rem(spacing.$large); // Make room for close button
+  @include media-queries.mq($from: sm) {
+    &--full-width {
+      &__image-container {
+        aspect-ratio: 21 / 9;
+      }
     }
   }
 
   @include media-queries.mq($from: md) {
     @include layout.clearfix;
+
+    &--full-width {
+      &__image-container {
+        aspect-ratio: unset;
+        bottom: 0;
+        overflow: hidden;
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: 0;
+
+        @include media-queries.mq($from: md) {
+          display: flex;
+          width: 34%;
+        }
+
+        &::before {
+          background: colours.$action-banner-full-width-background;
+          content: '';
+          flex: 0 0 200px;
+          pointer-events: none;
+          position: relative;
+          transform: rotate(-15deg) scale(1.2) translateX(-60%);
+          z-index: 1;
+        }
+      }
+    }
 
     &__text {
       margin-bottom: 0;
@@ -117,16 +204,6 @@
       top: 50%;
       transform: translateY(-50%);
       width: math.percentage(1 * 0.25);
-    }
-
-    &--closeable {
-      .action-banner__title {
-        padding-right: 0;
-      }
-
-      .action-banner__actions {
-        right: utils.rem(spacing.$x-large);
-      }
     }
   }
 }
