--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -69,6 +69,12 @@ $action-banner-default-background: global.$nice-blue;
 $action-banner-default-border: global.$nice-black;
 $action-banner-subtle-background: global.$nice-cream;
 $action-banner-subtle-border: global.$nice-cream;
+$action-banner-full-width-background: global.$nice-teal;
+$action-banner-full-width-border: global.$nice-teal;
+$action-banner-full-width-subtle-background: global.$nice-cream-3;
+$action-banner-full-width-subtle-border: global.$nice-cream-3;
+$action-banner-full-width-dark-background-text-colour: global.$white;
+$action-banner-full-width-light-background-text-colour: global.$custom-blue-1;
 
 // Alphabet
 $alphabet-letter-background: global.$white;
