NDS-414 Update outline tag and full width  header styles

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -182,9 +182,8 @@ $tag-background: global.$black-tint-1;
 $tag-remove: global.$nice-teal;
 $tag-remove-hover-after: global.$nice-black;
 $tag-print-text: global.$black;
+
 // Tag colours
-$tag-outline-text: global.$black-tint-1;
-$tag-outline-background: global.$custom-grey-4;
 $tag-alpha-background: global.$custom-pink;
 $tag-alpha-text: global.$white;
 $tag-beta-background: global.$custom-orange-2;
@@ -197,6 +196,9 @@ $tag-error-background: global.$custom-red-1;
 $tag-error-text: global.$custom-red-1-tint;
 $tag-info-background: global.$custom-blue-3;
 $tag-info-text: global.$black;
+$tag-outline-background: global.$white;
+$tag-outline-border: global.$black-tint-1;
+$tag-outline-text: global.$black-tint-1;
 $tag-new-background: global.$yellow;
 $tag-new-text: global.$black;
 $tag-success-background: global.$custom-green-1;
