--- a/docs/components/examples/Example.module.scss
+++ b/docs/components/examples/Example.module.scss
@@ -13,7 +13,7 @@
 
   &.expanded {
     background-color: #fff;
-    position: absolute;
+    position: relative;
     width: 100vw;
     height: 100vh;
     left: 50%;
