NDS-418 Increase margins for full width action banner variant

--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -78,6 +78,7 @@
     }
 
     .action-banner__container {
+      @include layout.fullWidthContainer();
       min-height: 300px;
       padding-top: utils.rem(spacing.$x-large);
       padding-bottom: utils.rem(spacing.$x-large);
