--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -64,6 +64,11 @@ $radio-hint: global.$black-tint-1;
 // A-Z list
 $a-z-list-heading-background: global.$white;
 
+// Accordion
+$accordion-details-border: global.$custom-grey-3;
+$accordion-toggle-warning-label: global.$nice-black;
+$accordion-summary-hover: global.$nice-blue-tint-1;
+
 // Action banner
 $action-banner-default-background: global.$nice-blue;
 $action-banner-default-border: global.$nice-black;
