--- a/components/nds-accordion/scss/accordion.scss
+++ b/components/nds-accordion/scss/accordion.scss
@@ -32,17 +32,20 @@
       color: #006bbd; // Specific to BNF accordions for now - Nick may move this into the design system later
     }
 
-    // Could be h3/h4 here so use * to cover all bases
-    > * {
-      font-family: typography.get-font-family(sans);
-    }
-
     > :last-child {
       margin: 0;
     }
 
     [open] > & {
       margin-bottom: utils.rem(spacing.$medium);
+    }
+  }
+
+  &__title {
+    > * {
+      font-family: typography.get-font-family(sans);
+      @include typography.font-size(2);
+      margin: 0;
     }
   }
 
