--- a/components/nds-accordion/scss/toggle.scss
+++ b/components/nds-accordion/scss/toggle.scss
@@ -6,6 +6,7 @@
 .toggle {
   &__label {
     @include typography.link-default;
+    @include typography.font-size(0);
     align-items: center;
     color: colours.$link;
     display: flex;
