--- a/components/nds-accordion/scss/toggle.scss
+++ b/components/nds-accordion/scss/toggle.scss
@@ -5,13 +5,17 @@
 
 .toggle {
   &__label {
-    @include typography.link-default;
+    // @include typography.link-default;
     @include typography.font-size(0);
     align-items: center;
-    color: colours.$link;
+    color: colours.$accrordion-label-text;
     display: flex;
     flex-wrap: nowrap;
     text-decoration: underline;
+    :hover {
+      color: colours.$accrordion-label-text-hover;
+      text-decoration-thickness: 0;
+    }
   }
 
   &__icon {
