--- a/components/nds-core/scss/focus/_index.scss
+++ b/components/nds-core/scss/focus/_index.scss
@@ -45,3 +45,13 @@
     }
   }
 }
+
+@mixin default-accordion-focus {
+  .accordion__summary,
+  summary {
+    &:focus-visible {
+      @include default-focus-style;
+      outline-offset: calc(-#{utils.rem(spacing.$x-small)} + 1px);
+    }
+  }
+}
