NDS-426 WIP: update focus styles to maintain focus on click and keyboard interaction
Co-authored-by: John Davey <johndavey72@users.noreply.github.com>

--- a/components/nds-core/scss/focus/_index.scss
+++ b/components/nds-core/scss/focus/_index.scss
@@ -49,7 +49,7 @@
 @mixin default-accordion-focus {
   .accordion__summary,
   summary {
-    &:focus-visible {
+    &:focus {
       @include default-focus-style;
       outline-offset: calc(-#{utils.rem(spacing.$x-small)} + 1px);
     }
