NDS-426: add alias for summary background and selectors for focus

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -65,6 +65,7 @@ $radio-hint: global.$black-tint-1;
 $a-z-list-heading-background: global.$white;
 
 // Accordion
+$accordion-default-background: global.$white;
 $accordion-details-border: global.$black;
 $accordion-toggle-warning-label: global.$nice-black;
 $accordion-summary-hover: global.$nice-teal-tint-3;
