--- a/components/nds-core/scss/focus/_index.scss
+++ b/components/nds-core/scss/focus/_index.scss
@@ -48,6 +48,7 @@
 
 @mixin default-accordion-focus {
   .accordion__summary,
+  button.accordion__summary,
   summary {
     &:focus {
       @include default-focus-style;
