NDS-426: update selectors on accordion-focus

--- a/components/nds-core/scss/focus/_index.scss
+++ b/components/nds-core/scss/focus/_index.scss
@@ -48,7 +48,7 @@
 
 @mixin default-accordion-focus {
   .accordion__summary,
-  button.accordion__summary,
+  button,
   summary {
     &:focus {
       @include default-focus-style;
