--- a/components/nds-accordion/scss/toggle.scss
+++ b/components/nds-accordion/scss/toggle.scss
@@ -5,24 +5,19 @@
 
 .toggle {
   &__label {
-    // @include typography.link-default;
     @include typography.font-size(0);
     align-items: center;
     color: colours.$accrordion-label-text;
     display: flex;
     flex-wrap: nowrap;
+    gap: utils.rem(spacing.$small);
     text-decoration: underline;
-    :hover {
-      color: colours.$accrordion-label-text-hover;
-      text-decoration-thickness: 0;
-    }
   }
 
   &__icon {
     display: block;
-    margin-right: utils.rem(spacing.$small);
-    transition: all 0.25s ease;
-
+    pointer-events: none;
+    transition: transform 0.25s ease;
     &--open {
       transform: rotate(-180deg);
     }
