fix: update PageHeader to carry verticalPadding prop
- add prop for verticalPadding with default of null and variant of loose.
- fixes vertical padding visual regression across services

Co-authored-by: John Davey <johndavey72@users.noreply.github.com>

--- a/components/nds-page-header/scss/page-header.scss
+++ b/components/nds-page-header/scss/page-header.scss
@@ -31,7 +31,6 @@
 /// @since 0.4.0
 .page-header {
   margin: utils.rem(0 0 spacing.$x-large 0);
-  padding: utils.rem(spacing.$large) 0 utils.rem(spacing.$x-large);
 
   &--full-width-light {
     @include layout.fullWidth();
@@ -56,6 +55,10 @@
         outline-color: colours.$page-header-full-width-dark-background-text-colour;
       }
     }
+  }
+
+  &--vertical-padding-loose {
+    padding: utils.rem(spacing.$large) 0 utils.rem(spacing.$x-large);
   }
 
   &__pre-heading {
