--- a/components/nds-accordion/scss/accordion.scss
+++ b/components/nds-accordion/scss/accordion.scss
@@ -6,8 +6,6 @@
 
 .accordion {
   background-color: colours.$accordion-default-background;
-  display: flex;
-  flex-direction: column;
   font-family: typography.get-font-family(sans);
   margin: utils.rem(spacing.$medium 0);
   max-width: 40rem;
@@ -51,6 +49,7 @@
     font-weight: bold;
     gap: utils.rem(spacing.$small);
     margin: 0;
+    text-wrap: pretty;
 
     > svg {
       display: block;
@@ -76,5 +75,40 @@
     > :last-child {
       margin-bottom: 0;
     }
+  }
+}
+
+@media print {
+  .accordion {
+    background-color: transparent;
+    border: none;
+    max-width: none;
+
+    + .accordion {
+      margin-top: utils.rem(spacing.$large);
+    }
+
+    &__summary {
+      background-color: transparent;
+    }
+
+    &__content,
+    &__content[hidden] {
+      display: block;
+
+      > .accordion {
+        margin: utils.rem(spacing.$large);
+      }
+    }
+
+    &__toggleLabel {
+      display: none;
+    }
+  }
+
+  .toggle__label {
+    display: none;
+    height: 0;
+    visibility: hidden;
   }
 }
